# mlops

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
api/: __init__.py  app.py  schema.py
configs/: cnn_model.yaml  data.yaml  preprocess.yaml  resnet_model.yaml  train.yaml
flower/: utils.py
src/flower/: __init__.py  cli.py  eda.py  evaluate.py  ingest.py  preprocessing.py  registry.py
src/flower/models/: cnn.py  resnet.py  train.py
tests/smoke/: create_dummy_model.py  test_train_smoke.py
tests/unit/: test_api.py  test_model.py  test_preprocess.py  test_utils.py
